<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/action_chat"
        android:title="@string/action_chat"
        android:icon="@drawable/ic_baseline_chat_24" />
    <item
        android:id="@+id/action_dang"
        android:title="Đăng bài"
        android:icon="@drawable/ic_baseline_add_home_work_24"/>
    <item
        android:id="@+id/action_tb"
        android:title="@string/action_tb"
        android:icon="@drawable/ic_baseline_video_library_24"/>
    <item
        android:id="@+id/action_account"
        android:title="@string/action_account"
        android:icon="@drawable/ic_baseline_account_box_24"/>
</menu>