<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:gravity="center"
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_thong_tin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:text="@string/action_thong_tin"
            android:drawableTop="@drawable/ic_baseline_radio_button_checked_24"/>
        <TextView
            android:id="@+id/image3"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="-20dp"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:backgroundTint="#59000000"
            android:background="@drawable/ic_baseline_horizontal_rule_24"/>
        <TextView
            android:layout_marginLeft="-10dp"
            android:id="@+id/text_dia_chi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:text="@string/action_dia_chi"
            android:drawableTop="@drawable/ic_baseline_radio_button_checked_24"/>
        <TextView
            android:id="@+id/image1"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="-10dp"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:backgroundTint="#59000000"
            android:background="@drawable/ic_baseline_horizontal_rule_24"/>
        <TextView
            android:id="@+id/text_hinh_anh"
            android:layout_marginLeft="-20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:text="@string/action_anh"
            android:drawableTop="@drawable/ic_baseline_radio_button_checked_24"/>
        <TextView
            android:id="@+id/image2"
            android:layout_marginTop="-10dp"
            android:layout_marginLeft="-20dp"
            android:layout_width="75dp"
            app:itemIconTint="@color/color_bottom_nv"
            android:layout_height="30dp"
            android:backgroundTint="#59000000"
            android:background="@drawable/ic_baseline_horizontal_rule_24"/>
        <TextView
            android:id="@+id/text_xac_nhan"
            android:layout_marginLeft="-20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemTextColor="@color/color_bottom_nv2"
            android:text="@string/action_xac_nhan"
            app:itemIconTint="@color/color_bottom_nv2"
            android:drawableTop="@drawable/ic_baseline_check_circle_outline_24"/>

    </LinearLayout>
    <ScrollView
        android:layout_below="@id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text4"
        android:layout_below="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/teal_700"
        android:text="Diện tích(m2) " />
    <EditText
        android:id="@+id/edit_dientich"
        android:layout_below="@+id/text4"
        android:layout_width="250dp"
        android:hint="Diện tích"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"/>

            <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text3"
        android:layout_below="@+id/edit_sdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/teal_700"
        android:text="Giá phòng(VND)" />
    <EditText
        android:id="@+id/edit_gia"
        android:layout_below="@+id/text3"
        android:layout_width="250dp"
        android:hint="Giá phòng"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/text6"
        android:layout_below="@+id/edit_gia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/teal_700"
        android:text="Chọn tiện ích của phòng" />
    <LinearLayout
       android:id="@+id/tien_ich"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/text6"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Wifi"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/ic_baseline_wifi_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            android:text="WC riêng"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/ic_baseline_wc_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            android:text="Giữ xe "
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/ic_baseline_directions_bike_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            android:text="Tự do"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/ic_baseline_access_time_filled_24"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/tien_ich"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="Bếp"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/ic_baseline_soup_kitchen_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            android:text="Máy lạnh"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/iair"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:text="Tủ lạnh "
            android:drawableTop="@drawable/ic_baseline_kitchen_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            android:text="Máy giặt"
            app:itemIconTint="@color/color_bottom_nv2"
            app:itemTextColor="@color/color_bottom_nv2"
            android:drawableTop="@drawable/machine"/>

    </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>